--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="FR">
 <head>
     <title>Shower Presentation Engine</title>
     <meta charset="utf-8">
@@ -14,7 +14,7 @@
 <body class="shower list">
 
     <header class="caption">
-        <h1>Shower Presentation Engine</h1>
+        <h1>BIENUE DANS NOTRE VILLAGE </h1>
         <p>Yours Truly, Famous Inc.</p>
     </header>
 
